Fix work section overlay too big font size on mobile

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -133,6 +133,17 @@
     font-size: 2rem;
     padding: 1.5rem;
   }
+
+  .work__container__items__item__item-text-title {
+    font-size: 1.2rem;
+  }
+  .work__container__items__item__item-text-category {
+    font-size: 1rem;
+  }
+
+  .work__container__items__item__item-buttons {
+    font-size: 0.8rem;
+  }
 }
 
 @media screen and (max-width: 380px) {
